Fixed missing friend indicator on v6 navbar and alignment issues

--- a/src/components/FriendList/FriendIndicator.styl
+++ b/src/components/FriendList/FriendIndicator.styl
@@ -21,8 +21,8 @@
     padding-right: 0.5rem;
     padding-left: 0.5rem;
     align-items: center;
-    margin-bottom: -3px;
-    margin-top: 1px;
+    //margin-bottom: -3px;
+    //margin-top: 1px;
     cursor: pointer;
 
     .fa-users {
