--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -288,6 +288,13 @@ header.NavBar {
             max-height: "calc(100vh - %s)" % v6-navbar-height;
         }
     }
+
+
+    .FriendList {
+        top: v6-navbar-height;
+        max-height: "calc(100vh - %s)" % v6-navbar-height;
+        themed background-color navbar-background-color
+    }
 }
 
 
