--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -307,6 +307,12 @@ navbar-width= 17rem;
             themed color shade0
         }
     }
+
+
+    .FriendIndicator, .IncidentReportIndicator {
+        margin-bottom: -3px;
+        margin-top: 1px;
+    }
 }
 
 
